# openclaw-matrix

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md
.claude/skills/openclaw-mood/: SKILL.md
plans/: emotive-rain.md  openclaw-emotive-rain.md  ship-emotive-rain-skill.md
src/: app.rs  cli.rs  config.rs  main.rs  mood.rs  persist.rs  test.rs  theme.rs
src/chat/: mod.rs  widget.rs
src/effects/: burst.rs  dissolve.rs  glitch.rs  mod.rs
src/gateway/: config.rs  device.rs  mod.rs  protocol.rs
src/input/: mod.rs  widget.rs
src/rain/: characters.rs  column.rs  mod.rs  widget.rs
src/settings/: mod.rs  widget.rs
src/snapshots/: openclaw_matrix__test__large_letters.snap  openclaw_matrix__test__screen_buffer.snap  openclaw_matrix__test__screen_buffer_direction_left_emoji_crab_double_width.snap  openclaw_matrix__test__screen_buffer_direction_right_emoji_moon_double_width.snap  openclaw_mood__test__large_letters.snap
